# CA

./: .gitignore  CMakeLists.txt  README.md  test_all.sh
.github/workflows/: cache-gate.yml
archive/: MANIFEST.md
archive/docs-history/csv-legacy/: rv32ui_perf.csv  rv32ui_perf_nocache.csv  rv32ui_perf_p1.csv  rv32ui_perf_p10.csv
archive/docs-history/reports/: P2_CLOSURE_REPORT.md  SPEEDUP_REPORT.md
archive/stage-03-failure-debug/: rv32ui-p-fence_i_cache.out  rv32ui-p-fence_i_cache_after_fix.out  rv32ui-p-fence_i_nocache.out  rv32ui-p-lb_cache.out  rv32ui-p-lb_cache_after_fix.out  rv32ui-p-lb_nocache.out  rv32ui-p-lh_cache.out  rv32ui-p-lh_cache_after_fix.out  rv32ui-p-lh_nocache.out  rv32ui-p-ma_data_cache_after_fix.out  rv32ui-p-ma_data_cache_after_fix2.out  rv32ui-p-ma_data_nocache.out
archive/stage-04-full-run-baseline/: disk_usage_core.txt  disk_usage_top10.txt  web_health.json
archive/stage-05-legacy-scripts/: gen_speedup_report.py
benchmarks/: hello.c  hello.elf  linker.ld  matmul.c  matmul.elf  matmul.map  quicksort_stress.c  quicksort_stress.elf  quicksort_stress.map  start.S
docs/: BENCHMARK_REPORT.md  DOCS_CATALOG.md  FULL_TEST_PERFORMANCE_REPORT.html  FULL_TEST_PERFORMANCE_REPORT.md  ISA.md  PERFORMANCE_REPORT.md  REPO_INDEX.md  SPEEDUP_REPORT.md  full_test_summary_20260409.csv  full_test_summary_20260414.csv  rv32ui_perf.csv  rv32ui_perf_full_nocache.csv  rv32ui_perf_full_p1.csv  rv32ui_perf_full_p10.csv
docs/benchmark/20260414/: benchmark_detail.csv  benchmark_gate_checks.csv  benchmark_gate_report.md  benchmark_gate_result.json  benchmark_nocache.csv  benchmark_p1.csv  benchmark_p10.csv  benchmark_summary.csv
docs/cache_matrix/20260413/: benchmark_cache_gate_report.md  benchmark_matrix_detail.csv  benchmark_nocache.csv  benchmark_policy_summary.csv  benchmark_wb_nowa.csv  benchmark_wb_wa.csv  benchmark_wt_nowa.csv  benchmark_wt_wa.csv  gate_checks.csv  gate_report.md  gate_result.json  matrix_detail.csv  policy_summary.csv  rv32ui_nocache.csv  rv32ui_wb_nowa.csv  rv32ui_wb_wa.csv  rv32ui_wt_nowa.csv  rv32ui_wt_wa.csv
docs/second/: README.md  cache_gate_usage.md  detection_report_20260413.md  ppt_outline_20260413.md  progress_audit_20260413.md  verification_checklist_20260413.md  visual_demo_guide.md
src/: main.cpp
src/cache/: cache_config.h  simple_cache.cpp  simple_cache.h
src/cpu/: alu.cpp  alu.h  csr.cpp  csr.h  pipeline.cpp  pipeline.h  registers.cpp  registers.h  single_cycle.cpp  single_cycle.h
src/elf/: elf_loader.cpp  elf_loader.h
src/isa/: decoder.cpp  decoder.h
src/mem/: memory.cpp  memory.h
src/mmu/: mmu.cpp  mmu.h
src/periph/: timer.cpp  timer.h  timer_mmio.cpp  timer_mmio.h  tohost_mmio.cpp  tohost_mmio.h  uart_mmio.cpp  uart_mmio.h
src/trace/: trace.cpp  trace.h
tests/: test_cache_basic.cpp  test_cache_miss_types.cpp  test_cache_wb.cpp  test_csrs.cpp  test_decoder.cpp  test_elf_loader.cpp  test_integration_uart_timer.cpp  test_isa_immediates.cpp  test_load_store_byte_half.cpp  test_mmu_basic.cpp  test_pipeline.cpp  test_pipeline_forward.cpp  test_pipeline_load_store_instr.cpp  test_pipeline_uart_rx.cpp  test_privilege_security.cpp  test_sfence_vma.cpp  test_singlecycle.cpp  test_timer_interrupt.cpp  test_trap_delegation.cpp  test_uart_mmio.cpp
tmp/: run_rv32ui_collect.sh
tmp/full_run_20260409/: benchmark_rcs.csv  disk_usage_core.txt  disk_usage_top10.txt  matmul_recheck_rcs.csv  web_health.json
tmp/full_run_20260413/: disk_usage_core.txt  disk_usage_top10.txt  web_health.json  web_smoke_status.json
tools/: README.md  check_benchmark_cache_gate.py  check_benchmark_gate.py  check_cache_gate.py  gen_full_test_report.py  requirements.txt  run_benchmark_cache_matrix.sh  run_benchmark_profiles.sh  run_cache_gate_local.sh  run_cache_matrix.sh  run_trace_demo.sh  sample_web_smoke.sh  trace_server.py
web/: README.md  app.js  index.html  style.css
